--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Lasagna</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <div class="heading">
+        <h1>Lasagna</h1>
+    </div>
     <img src="/img/lasagna.jpg" alt="A picture of a finished lasagna"> 
     <h4>Descripton</h4>
     <p>A finished lasagna.</p>
